# time-sign

./: .gitignore  Cargo.toml  LICENSE  README.md  client.test.ts  client.ts  deno.json  generate_key.ts  import_map.json  main.ts  master.key  meta.json  secret.json  server.ts
.devcontainer/: Dockerfile  devcontainer.json  postcreate.sh
.github/workflows/: ci.yml  deno_deploy.yml
client/: client.test.ts  client.ts  mod.js  mod.js.map  mod.test.ts  mod.ts  pack.ts  test.ts
ibe-wasm/: Cargo.toml
ibe-wasm/src/: lib.rs
lib/: rs_lib.generated.js  rs_lib_bg.wasm
rs_lib/: Cargo.toml
rs_lib/src/: lib.rs
