[package]
name = "rs_lib"
version = "0.0.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[profile.release]
codegen-units = 1
incremental = true
lto = true
opt-level = "z"

[dependencies]
wasm-bindgen = "0.2.83"
js-sys = "0.3.60"
ibe = {version = "0.2.3", features = ["cgwkv"]}
rand = "0.8.4"
getrandom = { version = "0.2.7", features = ["js"] }
irmaseal-curve = { version = "0.1.4", features = [
  "alloc",
  "group",
  "pairings"
] }
group = "0.13.0"
serde = "1.0.140"
base64 = "0.21.0"
subtle = "2.4.1"
serde-wasm-bindgen = "0.4.3"
