[package]
name = "rs_lib"
version = "0.0.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.106"
js-sys = "0.3.83"
ibe = {version = "0.2.3", features = ["cgwkv"]}
rand = "0.8.4"
getrandom = { version = "0.2.7", features = ["js"] }
irmaseal-curve = { version = "0.1.4", features = [
  "alloc",
  "group",
  "pairings"
] }
group = "0.13.0"
serde = "1.0.140"
base64 = "0.21.0"
subtle = "2.4.1"
serde-wasm-bindgen = "0.4.3"
